k8s/hospital-mock/hospital-mock-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-mock-depl
  namespace: hospital-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-mock-depl
  template:
    metadata:
      labels:
        app: hospital-mock-depl
    spec:
      containers:
        - name: hospital-mock-depl
          image: synthiatelemed.azurecr.io/hospital-it-system-mock:191d8f798352ce8e089ae12dc1accdba30cf38e6
          resources:
            limits:
              memory: "256Mi"
              cpu: "150m"
            requests:
              memory: "100Mi"
              cpu: "10m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
