k8s/hospital-mock/hospital-mock-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-mock-srv
  namespace: hospital-mock
spec:
  selector:
    app: hospital-mock-depl
  ports:
    - port: 3000
      targetPort: 3000
