k8s/hospital-mock/hospital-mock-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hospital-mock-route
  namespace: hospital-mock
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hospital-mock.synthia.tech`)
    kind: Rule
    middlewares:
      - name: admin-basic-auth-middleware
        namespace: traefik
      - name: default-rate-limit-middleware
        namespace: default
    services:
    - name: hospital-mock-srv
      namespace: hospital-mock
      kind: Service
      port: 3000
  tls:
    secretName: hospital-mock-tls
    domains: 
    - main: hospital-mock.synthia.tech
